acmeair-ocp-helm/yaml/flight-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flight
spec:
  gateways:
  - acmeair-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /flight
    route:
    - destination:
        host: acmeair-flight-service
        port:
          number: 9080
