acmeair-ocp-helm/yaml/main-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: main
spec:
  gateways:
  - acmeair-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /acmeair
    route:
    - destination:
        host: acmeair-main-service
        port:
          number: 9080
